# apps/portal-angular/src/app/core/models/index.ts
@@ -1,6 +1,7 @@
 export * from './api-error.model';
 export * from './appointment.model';
 export * from './patient-profile.model';
+export * from './prescription.model';
 export * from './provider.model';
 export * from './slot.model';
 export * from './visit-type.model';
